# routes/user.js
@@ -2,12 +2,13 @@ const express = require('express');
 const router = express.Router();
 
 const userController = require('../controllers/user');
-const validation = require('../middleware/validate');
+const { verifyUser } = require('../middleware/common');
+const { isAuthenticated } = require('../middleware/auth');
 
 router.get('/', userController.getAll);
 router.get('/:username', userController.getOne);
-router.post('/', validation.saveUser, userController.createUser);
-router.put('/:username', validation.saveUser, userController.updateUser);
-router.delete('/:username', userController.deleteUser);
+router.post('/', verifyUser, userController.createUser);
+router.put('/:username', verifyUser, userController.updateUser);
+router.delete('/:username', isAuthenticated, userController.deleteUser);
 
 module.exports = router;
